--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -13,20 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies and Setup\r\n",
-    "import matplotlib\r\n",
-    "import matplotlib.pyplot as plt\r\n",
-    "import pandas as pd\r\n",
-    "import numpy as np\r\n",
-    "import requests\r\n",
-    "import gmaps\r\n",
-    "import os\r\n",
-    "\r\n",
-    "# Import API key\r\n",
+    "# Dependencies and Setup\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "import gmaps\n",
+    "import os\n",
+    "\n",
+    "# Import API key\n",
     "my_google_elevation_api_key = '<your_api_key>'"
    ]
   },
@@ -34,13 +34,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Store Part I results into DataFrame\r\n",
-    "* Load the csv exported in Part I to a DataFrame\r\n"
+    "### Store Part I results into DataFrame\n",
+    "* Load the csv exported in Part I to a DataFrame\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -255,15 +255,15 @@
        "[548 rows x 10 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\r\n",
-    "data_path=\"output_data/cities.csv\"\r\n",
-    "cities=pd.read_csv(data_path)\r\n",
+    "\n",
+    "data_path=\"output_data/cities.csv\"\n",
+    "cities=pd.read_csv(data_path)\n",
     "cities"
    ]
   },
@@ -279,23 +279,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\r\n",
+    "\n",
     "gmaps.configure(api_key=my_google_elevation_api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "699d73be09dd4c20aa42718b511e3605",
+       "model_id": "88af41e27b4f46ef814b93a6cd8ddee3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -308,19 +308,19 @@
     }
    ],
    "source": [
-    "gmaps.configure(api_key=my_google_elevation_api_key)\r\n",
-    "\r\n",
-    "\r\n",
-    "locations = cities[[\"Lat\", \"Lng\"]]\r\n",
-    "humidity = cities[\"Humidity\"]\r\n",
-    "fig = gmaps.figure(zoom_level=1.5, center= (20, 0))\r\n",
-    "\r\n",
-    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, \r\n",
-    "                                 dissipating=False, max_intensity=100,\r\n",
-    "                                 point_radius = 1,\r\n",
-    "                                )\r\n",
-    "\r\n",
-    "fig.add_layer(heat_layer)\r\n",
+    "gmaps.configure(api_key=my_google_elevation_api_key)\n",
+    "\n",
+    "\n",
+    "locations = cities[[\"Lat\", \"Lng\"]]\n",
+    "humidity = cities[\"Humidity\"]\n",
+    "fig = gmaps.figure(zoom_level=1.5, center= (20, 0))\n",
+    "\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, \n",
+    "                                 dissipating=False, max_intensity=100,\n",
+    "                                 point_radius = 1,\n",
+    "                                )\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
     "fig"
    ]
   },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -382,13 +382,13 @@
        "Index: []"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ideal= cities.loc[(cities[\"Max Temp\"]<75) & (cities[\"Max Temp\"]>70) & (cities[\"Wind Speed\"]<10) & (cities[\"Cloudiness\"]==10) & (cities[\"Wind Speed\"]<10)].dropna()\r\n",
+    "ideal= cities.loc[(cities[\"Max Temp\"]<75) & (cities[\"Max Temp\"]>70) & (cities[\"Wind Speed\"]<10) & (cities[\"Cloudiness\"]==10) & (cities[\"Wind Speed\"]<10)].dropna()\n",
     "ideal"
    ]
   },
@@ -407,17 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#creating variable hotel_df\r\n",
-    "hotel_df = ideal[['City','Country','Lat','Lng']].copy()\r\n"
+    "#creating variable hotel_df\n",
+    "hotel_df = ideal[['City','Country','Lat','Lng']].copy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,38 +431,38 @@
     }
    ],
    "source": [
-    "# geocoordinates\r\n",
-    "target_radius = 5000\r\n",
-    "target_type = \"lodging\"\r\n",
-    "\r\n",
-    "# set up a parameters dictionary\r\n",
-    "params = {\r\n",
-    "    \"radius\": target_radius,\r\n",
-    "    \"type\": target_type,\r\n",
-    "    \"key\": '<your_api_key>'\r\n",
-    "}\r\n",
-    "\r\n",
-    "for index, row in hotel_df.iterrows():\r\n",
-    "    lat = row['Lat']\r\n",
-    "    lng =row['Lng']\r\n",
-    "    params['location'] = f\"{lat},{lng}\"\r\n",
-    "    # base url\r\n",
-    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\r\n",
-    "\r\n",
-    "    # run a request using our params dictionary\r\n",
-    "    response = requests.get(base_url, params=params).json()\r\n",
-    "    \r\n",
-    "    try:\r\n",
-    "        hotel_df.loc[index, \"Hotel Name\"] = response['results'][0]['name']\r\n",
-    "    except (KeyError, IndexError):\r\n",
-    "        print(f\"no hotel in {index}\")\r\n",
-    "print(hotel_df)\r\n",
+    "# geocoordinates\n",
+    "target_radius = 5000\n",
+    "target_type = \"lodging\"\n",
+    "\n",
+    "# set up a parameters dictionary\n",
+    "params = {\n",
+    "    \"radius\": target_radius,\n",
+    "    \"type\": target_type,\n",
+    "    \"key\": '<your_api_key>'\n",
+    "}\n",
+    "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    lat = row['Lat']\n",
+    "    lng =row['Lng']\n",
+    "    params['location'] = f\"{lat},{lng}\"\n",
+    "    # base url\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "    # run a request using our params dictionary\n",
+    "    response = requests.get(base_url, params=params).json()\n",
+    "    \n",
+    "    try:\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = response['results'][0]['name']\n",
+    "    except (KeyError, IndexError):\n",
+    "        print(f\"no hotel in {index}\")\n",
+    "print(hotel_df)\n",
     "hotel_df.to_csv(\"output_data/hotel_data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,11 +503,11 @@
     }
    ],
    "source": [
-    "# Add marker layer ontop of heat map\r\n",
-    "markers = gmaps.marker_layer(locations)\r\n",
-    "\r\n",
-    "# Display figure\r\n",
-    "fig.add_layer(markers)\r\n",
+    "# Add marker layer ontop of heat map\n",
+    "markers = gmaps.marker_layer(locations)\n",
+    "\n",
+    "# Display figure\n",
+    "fig.add_layer(markers)\n",
     "fig"
    ]
   },
